@@ -42,6 +42,7 @@ TODO: fix rounding of colors when !xft (#aaaaaa => #a9a900) (do not use correct,
           set so its value does not get lost (reported and analysed by Andrei
           Paskevich).
         - rip out support for obsolete sgtty.h interface.
+        - rip out support for non-POSIX termios variants.
 
 8.1  Thu Dec  7 22:27:25 CET 2006
         - ｹﾘｽﾏｽﾌ゚ﾚｾ゙ﾝﾄ - zomg!!1, it's too early!!!
